kluster-manifests/traefik/traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
    - name: traefik-dashboard
      protocol: TCP
      port: 9000
      targetPort: traefik

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    gethomepage.dev/description: Ingress controller
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: k3s
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/name: Traefik
    gethomepage.dev/widget.type: trefik
    gethomepage.dev/widget.url: https://traefik.vicsufer.xyz
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: traefik
  namespace: kube-system
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.vicsufer.xyz
      http:
        paths:
          - backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - traefik.vicsufer.xyz
      secretName: traefik-general-tls
